0.9.3:

2009-05-15  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Mention the tests SUBDIR to fix the build.

2009-05-15  Siavash Safi  <siavash@siavashs.org>

	* configure.in: Increase version and required clutter-gtk version to 0.9.1

2009-04-27  Siavash Safi  <siavash@siavashs.org>

	* clutter-gtk/src/Makefile.am: Fixed the Makefile

2009-04-27  Siavash Safi  <siavash@siavashs.org>

	* .gitignore: Added .gitignore
	* clutter-gtk/src/Makefile.am:
	* clutter-gtk/src/clutter-gtk_docs.xml: Added docs xml
	* clutter-gtk/src/clutter-gtk_enums.defs:
	* clutter-gtk/src/clutter-gtk_methods.defs:
	* clutter-gtk/src/clutter-gtk_signals.defs: Regenerated defs
	* clutter-gtk/src/viewport.hg: Updated the ctor and create()
	* examples/events/event.cc: No need to show the stage, the stage is shown
	when the embed is shown
	* tools/extra_defs_gen/generate_defs_clutter_gtk.cc: Updated

2009-03-19  Murray Cumming  <murrayc@murrayc.com>

	* clutter-gtk/src/embed.hg: get_stage(): Use refreturn to fix the 
	refcount.

2009-03-16  Siavash Safi  <siavash@siavashs.org>

	* Makefile.am: Remove test/ directory since it includes old tests from
	cluttermm
	* clutter-gtk/src/clutter-gtk_methods.defs: Regenerated
	* clutter-gtk/src/viewport.hg: Updated get_origin() to use new argument
	types

2009-01-24  Deng Xiyue  <manphiz@gmail.com>

	* Change license header to mention Lesser General Public License
	version 2.1 instead of Library General Public License, to be
	consistent with COPYING.

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* examples/events/event.[h|cc]: Correct the coding style to match 
	gtkmm examples: Use of m_, use of Gtk::PACK*, use of std::cout, 
	no unnecessary virtuals.

2009-01-12  Siavash Safi  <siavash@siavashs.org>

	* clutter-gtk/clutter-gtkmm/utility.cc:
	* clutter-gtk/clutter-gtkmm/utility.h: Hand coded
	utility functions
	* examples/events/Makefile.am:
	* examples/events/event.cc:
	* examples/events/event.h: