@@ -1,4 +1,4 @@
-SUBDIRS		= tools clutter-gtk docs examples tests
+SUBDIRS		= tools clutter-gtk docs examples
 DIST_SUBDIRS	= $(SUBDIRS) scripts
 
 EXTRA_DIST	=  \
