@@ -1,10 +1,0 @@
-SUBDIRS = 
-
-#EXTRA_DIST =  Makefile.am_fragment README.txt
-
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-noinst_PROGRAMS = test-alpha-creation test-alpha-func
-test_alpha_creation_SOURCES = test-alpha-creation.cc
-test_alpha_func_SOURCES = test-alpha-func.cc
-
